--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
       </section>
 
       <section class="section-testimonials">
-        <div class="testimonials-container">
+        <div class="testimonials-container" id="testimonials-container">
           <span class="subheading">testimonials</span>
           <h2 class="heading-secondary">Once you try it, you can't go back</h2>
 
