--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     ></script>
   </head>
   <body>
-    <header class="header">
+    <header class="header nav-open">
       <a href="#">
         <img src="./img/omnifood-logo.png" alt="Omnifood logo" class="logo" />
       </a>
@@ -37,6 +37,11 @@
           <li><a class="main-nav-link nav-cta" href="#">Try for Free</a></li>
         </ul>
       </nav>
+
+      <button class="btn-mobile-nav">
+        <ion-icon class="icon-mobile-nav" name="menu"></ion-icon>
+        <ion-icon class="icon-mobile-nav" name="close"></ion-icon>
+      </button>
     </header>
 
     <main>
