--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
       src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.js"
     ></script>
   </head>
+
   <body>
-    <header class="header nav-open">
+    <header class="header">
       <a href="#">
         <img src="./img/omnifood-logo.png" alt="Omnifood logo" class="logo" />
       </a>
@@ -37,7 +38,6 @@
           <li><a class="main-nav-link nav-cta" href="#">Try for Free</a></li>
         </ul>
       </nav>
-
       <button class="btn-mobile-nav">
         <ion-icon class="icon-mobile-nav" name="menu"></ion-icon>
         <ion-icon class="icon-mobile-nav" name="close"></ion-icon>
@@ -699,5 +699,7 @@
         </nav>
       </div>
     </footer>
+
+    <script src="./app.js"></script>
   </body>
 </html>
